Added missing assets and removed node_modules from repo

--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "nodemon": "^3.1.7"
   },
   "keywords": [],
-  "description": ""
+  "description": "> Works same as Ceil",
+  "devDependencies": {}
 }
